language/move-lang/tests/move_check/parser/struct_missing_lbrace.exp
error: 

   ┌── tests/move_check/parser/struct_missing_lbrace.move:2:14 ───
   │
 2 │     struct S { f: u64
   │              - To match this '{'
 3 │     fun f() {}
   │     ^ Expected '}'
   │

